--- a/right-stm32f4/.cargo/config.toml
+++ b/right-stm32f4/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.thumbv7m-none-eabi]
-runner = 'probe-rs run --chip STM32F103C8T6'
+runner = 'probe-rs run --chip STM32F401RCT6'
 rustflags = [
   "-C", "link-arg=-Tlink.x",
   #"-C", "link-arg=-Tdefmt.x",
