--- a/right-stm32f4/Cargo.toml
+++ b/right-stm32f4/Cargo.toml
@@ -13,22 +13,19 @@ codegen-units = 1
 [dependencies]
 embedded-hal = "1.0.0"
 nb = "1"
+cortex-m = "0.7.6"
 cortex-m-rt = "0.7.1"
-cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
 # Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
 panic-halt = "1.0.0"
 panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
-rtt-target = {version = "0.6.1"}
+rtt-target = {version = "0.3.1", features=["cortex-m"]}
 cortex-m-semihosting = "0.5.0"
 usb-device = "0.3"
 usbd-human-interface-device = "0.5.1"
 stm32-usbd = "0.7.0"
 usbd-serial = "0.2.2"
 #panic-semihosting = "0.6.0"
-stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", features = [
-  "stm32f103",
-  "medium",
-] }
+stm32f4xx-hal = {version = "0.22.0", features = ["stm32f401"]}
 
 # [dependencies.stm32f1xx-hal]
 # version = "0.10.0"
