Right (slave (stm32f4)) firmware is done

--- a/left-stm32f1/Cargo.toml
+++ b/left-stm32f1/Cargo.toml
@@ -29,6 +29,8 @@ stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", feature
   "stm32f103",
   "medium",
 ] }
+shared-src = {path = "../shared-src"}
+
 
 # [dependencies.stm32f1xx-hal]
 # version = "0.10.0"
