--- a/left-stm32f1/Cargo.toml
+++ b/left-stm32f1/Cargo.toml
@@ -9,6 +9,7 @@ opt-level = 3
 lto = true
 panic = "abort"
 codegen-units = 1
+overflow-checks = false
 
 [dependencies]
 embedded-hal = "1.0.0"
@@ -16,8 +17,7 @@ nb = "1"
 cortex-m-rt = "0.7.1"
 cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
 # Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
-panic-halt = "1.0.0"
-panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
+panic-reset = "0.1.1"
 rtt-target = {version = "0.6.1"}
 cortex-m-semihosting = "0.5.0"
 usb-device = "0.3"
