Fixed freezing when the CapsLock was pressed (MacOS). Updated layout

--- a/left-stm32f1/Cargo.toml
+++ b/left-stm32f1/Cargo.toml
@@ -30,6 +30,7 @@ stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", feature
   "medium",
 ] }
 shared-src = {path = "../shared-src"}
+static_assertions = "1.1.0"
 
 [[bin]]
 name = "left-stm32f1"
